# voxels-rs

./: Cargo.toml
.github/workflows/: maven-publish.yml  pypi-publish.yml  rust.yml  tag-version.yml
core/: Cargo.toml
core/src/: common.rs  lib.rs  stream.rs
core/src/store/: blockstore.rs  mod.rs  paging.rs
core/src/store/paging/: arraypage.rs  mod.rs
core/src/stream/: any_reader.rs  legacy_ids.json  legacy_ids.rs  litematic_bit_array.rs  litematic_reader.rs  mcedit_reader.rs  mod.rs  mojang.rs  mojang_reader.rs  mojang_writer.rs  nbt_reader.rs  shared_stream.rs  sponge.rs  sponge_reader.rs  sponge_writer.rs  stream.rs  vxl_reader.rs  vxl_writer.rs
core/src/stream/test_schematics/: mcedit.schematic  schematic.spongev2  schematic2.spongev2  tree.sponge
java_bindings/: Cargo.toml  build.rs
java_bindings/java_src/: build.gradle.kts  settings.gradle.kts
java_bindings/java_src/de/richy/voxels/: Block.java  BlockInputStream.java  BlockOutputStream.java  BlockPosition.java  BlockState.java  Boundary.java  SchematicType.java  Voxels.java
java_bindings/java_src/src/main/java/de/richy/voxels/: Block.java  Boundary.java  Voxels.java
java_bindings/java_test/: TestAll.java  sponge3.vxl
java_bindings/src/: javastreams.rs  jstreams.rs  lib.rs
python_bindings/: Cargo.toml  pyproject.toml
python_bindings/python/voxels_rs/: __init__.py  voxels_rs.pyi
python_bindings/src/: lib.rs  pystream.rs  reader.rs  shared.rs
python_bindings/tests/: test_copy.py  test_core.py  test_iter_read.py  test_mcedit.py
test_data/: mojang.schem
